--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,125 @@
 <html>
 
 <head>
-    <title>Express</title>
-    <link rel="stylesheet" href="/stylesheets/style.css">
+    <title>Alexander Toop</title>
+    <meta name="description"
+          content="A website created to display information about and projects created by Alexander Toop. "/>
+    <link rel="icon" href="../images/favicon.ico"/>
+    <link rel="stylesheet" href="../stylesheets/style.css">
+    <!-- 'Simple line icons': lisenced under MIT lisence -->
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.css">
+    <!-- Gets fonts for titles and text -->
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Prociono" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
 </head>
 
 <body>
-<h1>Express</h1>
-<p>Welcome to Express</p>
-</body>
 
+
+<div id="nav-bar-content"></div>
+
+
+<div id="wrapper">
+
+    <div id="header">
+        <h1>Alexander John Toop</h1>
+    </div>
+
+    <div class="row">
+        <div class="col-md-6">
+            <h2>Me.</h2>
+            <p>
+                I'm an Undergraduate Software Engineer currently employed by BT as an industrial placement student. I
+                study at Aberystwyth University,
+                I'm in my third year of study with one year of study remaining for my Bachelor's degree.
+            </p>
+            <p>
+                I mainly work developing the Java backend for an intelligent pre-sales web application, taking user
+                story requirements, implementing and then ensuring thorough testing.
+                I've also starting picking up Angular and Javascript to help out with the project.
+            </p>
+
+            <h2>Projects.</h2>
+            <p>Java Coding Test - Router Patch Tester.</p>
+            <p>Arduino Hardware and Programming.</p>
+            <p>Swift Xcode App Development.</p>
+            <p>
+                <em>See <a routerLink="/projects">'Projects'</a> for more.
+                </em>
+            </p>
+
+        </div>
+
+        <div class="col-md-6">
+
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block img1" src="./images/Aberystwyth_Dock_Hipster.jpg" alt="First slide">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>...</h5>
+                            <p>...</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img1" src="./images/Aberystwyth_Looking_Out.jpg" alt="Second slide">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>...</h5>
+                            <p>...</p>
+                        </div>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+
+            <h2>Hobbies.</h2>
+            <p>
+                I'm a keen technology enthusiast who loves to spend time outside of work working on Arduino and
+                Raspberry Pi projects (some of the code I've worked on is included
+                in the 'Projects section of this website!).
+            </p>
+            <p>
+                I'm very dedicated to practising Shotokan Karate and helping with classes in my local area, with
+                experience running my Universities Karate classes and training with
+                some of the best teachers available.
+            </p>
+        </div>
+
+
+    </div>
+    <img src="./images/Aberystwyth_Karate_Club_Stall.jpg"
+         alt="Aberystwyth Karate Stall Image" class="img4"/>
+</div>
+
+
+<div id="footer">Alexander J. Toop 2018</div>
+</body>
 </html>
+
+<script>
+    $(document).ready(function () {
+        $('#nav-bar-content').load('jquery_includes/navbar.html');
+    });
+</script>
