Updated some of the visual elements of the website to use a more modern look. Reduced number of pages on site.

--- a/public/contact.html
+++ b/public/contact.html
@@ -69,24 +69,12 @@
                     <a href="https://twitter.com/alexandertoop" target="_blank">twitter.com/alexandertoop</a>
                 </p>
 
-                <div class="icons">
-                    <ul class="social-links">
-                        <li><a href="https://uk.linkedin.com/in/alexandertoop"
-                               target="_blank"><i class="icon-social-linkedin"></i></a></li>
-                        <li><a href="https://github.com/AlexToop" target="_blank"><i
-                                class="icon-social-github"></i></a></li>
-                        <li><a href="https://www.facebook.com/AlexanderToop"
-                               target="_blank"><i class="icon-social-facebook"></i></a></li>
-                        <li><a href="https://twitter.com/alexandertoop"
-                               target="_blank"><i class="icon-social-twitter"></i></a></li>
-                    </ul>
-                </div>
             </div>
 
 
             <!-- This is the right section of the page. -->
             <div class="col-md-6">
-                <img src="images/Alexander_Toop_Profile.png"
+                <img src="images/alextoop-profile.jpg"
                      alt="Alexander Toop Profile" class="img3"/>
             </div>
 
@@ -96,7 +84,7 @@
 </div>
 
 
-<div id="footer">Alexander J. Toop 2018</div>
+<!--<div id="footer">Alexander J. Toop 2018</div>-->
 </body>
 </html>
 
