--- a/public/projects.html
+++ b/public/projects.html
@@ -100,7 +100,7 @@
 </div>
 
 
-<div id="footer">Alexander J. Toop 2018</div>
+<!--<div id="footer">Alexander J. Toop 2018</div>-->
 </body>
 </html>
 
