--- a/public/index.html
+++ b/public/index.html
@@ -37,32 +37,27 @@
     </div>
 
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 justify">
+
+
             <h2>Me.</h2>
             <p>
-                I'm an Undergraduate Software Engineer currently employed by BT as an industrial placement student. I
-                study at Aberystwyth University,
-                I'm in my third year of study with one year of study remaining for my Bachelor's degree.
+                I recently finished studies at Aberystwyth University and am pending results for the Software
+                Engineering Bachelor's degree.
             </p>
             <p>
-                I mainly work developing the Java backend for an intelligent pre-sales web application, taking user
-                story requirements, implementing and then ensuring thorough testing.
-                I've also starting picking up Angular and Javascript to help out with the project.
+                Prior employment at BT as seen me develop Java server back-ends and Angular front-ends for intelligent
+                pre-sales systems in commercial environments.
             </p>
 
-            <h2>Projects.</h2>
-            <p>Java Coding Test - Router Patch Tester.</p>
-            <p>Arduino Hardware and Programming.</p>
-            <p>Swift Xcode App Development.</p>
-            <p>
-                <em>See <a routerLink="/projects">'Projects'</a> for more.
-                </em>
-            </p>
 
-        </div>
+            <h2>History.</h2>
+            <p>Achieved grades BBBD in Computing, Mathematics, General Studies and Physics at A-Level.</p>
+            <p>[In-Progress] BCS Accredited Software Engineering Bachelors Degree (4Yr Integrated Industrial Year)
+                Aberystwyth University.</p>
+            <p>[1Yr Employment] Developed Java and Angular in BT Consumer.</p>
 
-        <div class="col-md-6">
-
+            <h2>Photography.</h2>
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -94,16 +89,29 @@
                 </a>
             </div>
 
+        </div>
+
+        <div class="col-md-6 justify">
+
+
+            <h2>Experience.</h2>
+            <p>[Commercial] Java and JavaScript development and deployment.</p>
+            <p>[Commercial] JUnit, Jasmine and Angular framework use.</p>
+            <p>[Personal] Fitbit JavaScript and node.js development.</p>
+
+            <div class="github-widget" data-username="alextoop"></div>
+            <script src="https://npmcdn.com/github-card@1.2.0/dist/widget.js"></script>
+
+
             <h2>Hobbies.</h2>
             <p>
-                I'm a keen technology enthusiast who loves to spend time outside of work working on Arduino and
-                Raspberry Pi projects (some of the code I've worked on is included
-                in the 'Projects section of this website!).
+                I am keen to persue development projects in my spare time and currently enjoy Fitbit JavaScript
+                development alongside node.js projects. See '<a href="projects.html">Projects</a>' section of this
+                website.
             </p>
             <p>
-                I'm very dedicated to practising Shotokan Karate and helping with classes in my local area, with
-                experience running my Universities Karate classes and training with
-                some of the best teachers available.
+                I regularly swim with friends and enjoy long-distance running on occasion. Competitive esports gaming is
+                one of my passions and I have attended and won events at LANs as a part of a team.
             </p>
         </div>
 
@@ -114,12 +122,13 @@
 </div>
 
 
-<div id="footer">Alexander J. Toop 2018</div>
+<!--<div id="footer">Alexander J. Toop 2018</div>-->
 </body>
 </html>
 
 <script>
     $(document).ready(function () {
         $('#nav-bar-content').load('jquery_includes/navbar.html');
+        $('#home-link').addClass('active');
     });
 </script>
