--- a/public/jquery_includes/navbar.html
+++ b/public/jquery_includes/navbar.html
@@ -1,19 +1,17 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-default  fixed-top">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary navbar-default  fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="/home">AJT</a>
+        <a class="navbar-brand padding-left-200" href="../index.html">AJT</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+        <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="../about.html">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="../cv.html">CV</a></li>
-                <li class="nav-item"><a class="nav-link" href="../projects.html">Projects</a></li>
-                <li class="nav-item"><a class="nav-link" href="../contact.html">Contact</a></li>
+                <li id="home-link" class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
+                <li id="projects-link" class="nav-item"><a class="nav-link" href="../projects.html">Projects</a></li>
+                <li id="contact-link" class="nav-item"><a class="nav-link" href="../contact.html">Contact</a></li>
             </ul>
         </div>
     </div>
