Integration of a LinkedIn 'profile badge'. Updates to text content. Removal of unnecessary files.

--- a/public/contact.html
+++ b/public/contact.html
@@ -22,6 +22,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 </head>
 
 <body>
@@ -45,28 +46,29 @@
             <!-- This is the left section of the page. -->
             <div class="col-md-6">
 
+                <h2>
+                    Note.
+                </h2>
+                <p>
+                    I prefer to be contacted through <a href="https://www.linkedin.com/in/alexandertoop/"
+                                                        target="_blank">LinkedIn</a> if possible, however, email contact
+                    is also fine.
+                </p>
 
                 <h2>
-                    Details:
+                    Email.
                 </h2>
                 <div class="icon-briefcase"></div>
-                <p>alt28@aber.ac.uk</p>
-                <div class="icon-social-linkedin"></div>
-                <p>
-                    <a href="http://uk.linkedin.com/in/alexandertoop"
-                       target="_blank">uk.linkedin.com/in/alexandertoop</a>
-                </p>
+                <p><a href="mailto:alextoop@protonmail.com?subject=Enquiry">
+                    alextoop@protonmail.com
+                </a></p>
+
+                <h2>
+                    GitHub.
+                </h2>
                 <div class="icon-social-github"></div>
                 <p>
                     <a href="https://github.com/AlexToop" target="_blank">github.com/AlexToop</a>
-                </p>
-                <div class="icon-social-facebook"></div>
-                <p>
-                    <a href="http://www.facebook.com/AlexanderToop" target="_blank">facebook.com/AlexanderToop</a>
-                </p>
-                <div class="icon-social-twitter"></div>
-                <p>
-                    <a href="https://twitter.com/alexandertoop" target="_blank">twitter.com/alexandertoop</a>
                 </p>
 
             </div>
@@ -74,8 +76,15 @@
 
             <!-- This is the right section of the page. -->
             <div class="col-md-6">
-                <img src="images/alextoop-profile.jpg"
-                     alt="Alexander Toop Profile" class="img3"/>
+                <h2>
+                    LinkedIn.
+                </h2>
+                <!-- Profile badge -->
+                <!--<div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="alexandertoop"><a class="LI-simple-link" href='https://uk.linkedin.com/in/alexandertoop?trk=profile-badge'>Alexander Toop</a></div>-->
+                <div class="LI-profile-badge linkedin-widget" data-version="v1" data-size="large" data-locale="en_US"
+                     data-type="vertical" data-theme="light" data-vanity="alexandertoop"><a class="LI-simple-link"
+                                                                                            href='https://uk.linkedin.com/in/alexandertoop?trk=profile-badge'>Alexander
+                    Toop</a></div>
             </div>
 
 
