--- a/public/index.html
+++ b/public/index.html
@@ -37,75 +37,27 @@
     </div>
 
     <div class="row">
-        <div class="col-md-6 justify">
+        <div class="col-md-6">
 
 
             <h2>Me.</h2>
             <p>
-                I recently finished studies at Aberystwyth University and am pending results for the Software
-                Engineering Bachelor's degree.
+                Studied at Aberystwyth University Software Engineering BEng. Results pending.
             </p>
             <p>
-                Prior employment at BT as seen me develop Java server back-ends and Angular front-ends for intelligent
-                pre-sales systems in commercial environments.
+                Developed Java server back-ends and Angular front-ends for intelligent
+                pre-sales systems in prior BT employment.
             </p>
-
 
             <h2>History.</h2>
             <p>Achieved grades BBBD in Computing, Mathematics, General Studies and Physics at A-Level.</p>
-            <p>[In-Progress] BCS Accredited Software Engineering Bachelors Degree (4Yr Integrated Industrial Year)
-                Aberystwyth University.</p>
-            <p>[1Yr Employment] Developed Java and Angular in BT Consumer.</p>
-
-            <h2>Photography.</h2>
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                </ol>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img class="d-block img1" src="./images/Aberystwyth_Dock_Hipster.jpg" alt="First slide">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>...</h5>
-                            <p>...</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block img1" src="./images/Aberystwyth_Looking_Out.jpg" alt="Second slide">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>...</h5>
-                            <p>...</p>
-                        </div>
-                    </div>
-                </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
-
-        </div>
-
-        <div class="col-md-6 justify">
-
-
-            <h2>Experience.</h2>
-            <p>[Commercial] Java and JavaScript development and deployment.</p>
-            <p>[Commercial] JUnit, Jasmine and Angular framework use.</p>
-            <p>[Personal] Fitbit JavaScript and node.js development.</p>
-
-            <div class="github-widget" data-username="alextoop"></div>
-            <script src="https://npmcdn.com/github-card@1.2.0/dist/widget.js"></script>
-
+            <p>BCS Accredited Software Engineering Bachelors Degree (4Yr Integrated Industrial Year)
+                Aberystwyth University. [Pending] </p>
+            <p>BT TSO Software Development involving Java and Angular.</p>
 
             <h2>Hobbies.</h2>
             <p>
-                I am keen to persue development projects in my spare time and currently enjoy Fitbit JavaScript
+                I am keen to pursue development projects in my spare time and currently enjoy Fitbit JavaScript
                 development alongside node.js projects. See '<a href="projects.html">Projects</a>' section of this
                 website.
             </p>
@@ -113,16 +65,58 @@
                 I regularly swim with friends and enjoy long-distance running on occasion. Competitive esports gaming is
                 one of my passions and I have attended and won events at LANs as a part of a team.
             </p>
+
+        </div>
+
+        <div class="col-md-6">
+
+
+            <h2>Development.</h2>
+            <p>[Commercial] Java and JavaScript development and deployment.</p>
+            <p>[Commercial] JUnit, Jasmine and Angular framework use.</p>
+            <p>[Personal] Fitbit JavaScript and node.js development.</p>
+
+            <h2>GitHub.</h2>
+            <div class="github-widget" data-username="alextoop"></div>
+            <script src="https://npmcdn.com/github-card@1.2.0/dist/widget.js"></script>
+
         </div>
 
 
     </div>
-    <img src="./images/Aberystwyth_Karate_Club_Stall.jpg"
-         alt="Aberystwyth Karate Stall Image" class="img4"/>
+    <h2>Photography.</h2>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block img4" src="./images/Aberystwyth_Dock_Hipster.jpg" alt="First slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Main harbour.</h5>
+                    <p>Aberystwyth, UK.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="d-block img4" src="./images/Aberystwyth_Looking_Out.jpg" alt="Second slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Harbour view.</h5>
+                    <p>Aberystwyth, UK.</p>
+                </div>
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
 </div>
 
-
-<!--<div id="footer">Alexander J. Toop 2018</div>-->
 </body>
 </html>
 
