Mobile viewport meta added for mobile responsiveness issues. Added Redis reference to npm.

--- a/public/contact.html
+++ b/public/contact.html
@@ -23,6 +23,7 @@
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
