Support added for mobile device 'add to home screen' functionality with website icons. Placeholder login page added. Starting to look at SSL integration.

--- a/public/jquery_includes/navbar.html
+++ b/public/jquery_includes/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary navbar-default  fixed-top">
     <div class="container">
-        <a class="navbar-brand padding-left-200" href="../index.html">AJT</a>
+        <a class="navbar-brand" href="../index.html">Alex Toop</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -8,11 +8,14 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="nav navbar-nav mr-auto">
                 <li id="home-link" class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
                 <li id="projects-link" class="nav-item"><a class="nav-link" href="../projects.html">Projects</a></li>
                 <li id="contact-link" class="nav-item"><a class="nav-link" href="../contact.html">Contact</a></li>
             </ul>
+            <!--<ul class="nav navbar-nav ml-auto">-->
+            <!--<li id="login-link" class="nav-item"><a class="nav-link" href="../login.html">Login</a></li>-->
+            <!--</ul>-->
         </div>
     </div>
 </nav>
