--- a/public/login.html
+++ b/public/login.html
@@ -22,7 +22,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
-    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Website icon support, absolute urls used for device compatibility -->
     <!-- To support old sizes -->
@@ -51,67 +50,45 @@
 
 <div id="wrapper">
 
-
     <div id="header">
-        <h1>Contact</h1>
+        <h1>Login</h1>
     </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div id="about_section">
 
-
-    <div id="section">
-
-
-        <div class="row">
-            <!-- This is the left section of the page. -->
-            <div class="col-md-6">
-
-                <h2>
-                    Note.
-                </h2>
+                <h2>Administration.</h2>
                 <p>
-                    I prefer to be contacted through <a href="https://www.linkedin.com/in/alexandertoop/"
-                                                        target="_blank">LinkedIn</a> if possible, however, email contact
-                    is also fine.
+                    This portal is intended for use to administrate the contents of the website. Please contact <a
+                        href="mailto:alextoop@protonmail.com?subject=Enquiry">alextoop@protonmail.com
+                </a> if you have any queries.
                 </p>
 
-                <h2>
-                    Email.
-                </h2>
-                <div class="icon-briefcase"></div>
-                <p><a href="mailto:alextoop@protonmail.com?subject=Enquiry">
-                    alextoop@protonmail.com
-                </a></p>
-
-                <h2>
-                    GitHub.
-                </h2>
-                <div class="icon-social-github"></div>
-                <p>
-                    <a href="https://GitHub.com/AlexToop" target="_blank">github.com/AlexToop</a>
-                </p>
+                <form>
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Username</label>
+                        <input disabled type="email" class="form-control" id="exampleInputEmail1"
+                               aria-describedby="emailHelp" placeholder="Enter username">
+                        <!--<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>-->
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputPassword1">Password</label>
+                        <input disabled type="password" class="form-control" id="exampleInputPassword1"
+                               placeholder="Password">
+                    </div>
+                    <!--<div class="form-check">-->
+                    <!--<input type="checkbox" class="form-check-input" id="exampleCheck1">-->
+                    <!--<label class="form-check-label" for="exampleCheck1">Check me out</label>-->
+                    <!--</div>-->
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
 
             </div>
-
-
-            <!-- This is the right section of the page. -->
-            <div class="col-md-6">
-                <h2>
-                    LinkedIn.
-                </h2>
-                <!-- Profile badge -->
-                <!--<div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="alexandertoop"><a class="LI-simple-link" href='https://uk.linkedin.com/in/alexandertoop?trk=profile-badge'>Alexander Toop</a></div>-->
-                <div class="LI-profile-badge linkedin-widget" data-version="v1" data-size="large" data-locale="en_US"
-                     data-type="vertical" data-theme="light" data-vanity="alexandertoop"><a class="LI-simple-link"
-                                                                                            href='https://uk.linkedin.com/in/alexandertoop?trk=profile-badge'>Alexander
-                    Toop</a></div>
-            </div>
-
-
         </div>
     </div>
 </div>
 
 
-<!--<div id="footer">Alexander J. Toop 2018</div>-->
 </body>
 </html>
 
