--- a/public/projects.html
+++ b/public/projects.html
@@ -23,6 +23,23 @@
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Website icon support, absolute urls used for device compatibility -->
+    <!-- To support old sizes -->
+    <link rel="apple-touch-icon" sizes="57x57" href="http://www.alextoop.com/images/device-icon-57.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="http://www.alextoop.com/images/device-icon-72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="http://www.alextoop.com/images/device-icon-114.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="http://www.alextoop.com/images/device-icon-144.png">
+
+    <!--To support new sizes-->
+    <link rel=”apple-touch-icon” sizes=”60×60″ href=”http://www.alextoop.com/images/device-icon-60.png”>
+    <link rel=”apple-touch-icon” sizes=”76×76″ href=”http://www.alextoop.com/images/device-icon-76.png”>
+    <link rel=”apple-touch-icon” sizes=”120×120″ href=”http://www.alextoop.com/images/device-icon-120.png”>
+    <link rel=”apple-touch-icon” sizes=”152×152″ href=”http://www.alextoop.com/images/device-icon-152.png”>
+    <link rel=”apple-touch-icon” sizes=”180×180″ href=”http://www.alextoop.com/images/device-icon-180.png”>
+
+    <!--To support Android-->
+    <link rel=”icon” sizes=”192×192″ href=”http://www.alextoop.com/images/device-icon-192.png”>
+    <link rel=”icon” sizes=”128×128″ href=”http://www.alextoop.com/images/device-icon-128.png”>
 </head>
 
 <body>
@@ -39,6 +56,11 @@
     <div class="row">
         <div class="col-md-12">
             <div id="about_section">
+
+                <div class="alert alert-primary" role="alert">
+                    Please look at <a href="https://github.com/AlexToop" target="_blank">GitHub.com/AlexToop</a> for my
+                    most recent development.
+                </div>
 
                 <h2>Angular 5 Website Development.</h2>
                 <p>
