LinkedIn script added for profile badge.

--- a/public/contact.html
+++ b/public/contact.html
@@ -98,6 +98,8 @@
                 </h2>
                 <!-- Profile badge -->
                 <!--<div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="alexandertoop"><a class="LI-simple-link" href='https://uk.linkedin.com/in/alexandertoop?trk=profile-badge'>Alexander Toop</a></div>-->
+                <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async
+                        defer></script>
                 <div class="LI-profile-badge linkedin-widget" data-version="v1" data-size="large" data-locale="en_US"
                      data-type="vertical" data-theme="light" data-vanity="alexandertoop"><a class="LI-simple-link"
                                                                                             href='https://uk.linkedin.com/in/alexandertoop?trk=profile-badge'>Alexander
