Added titles to pages.

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Alexander Toop</title>
+    <title>Home - Alexander Toop</title>
     <meta name="description"
           content="A website created to display information about and projects created by Alexander Toop. "/>
     <link rel="icon" href="../images/favicon.ico"/>
