Allowed http use on local development configuration. Fixed screen side overlap issues. Moved information on index page. Improved SEO tags.

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,10 @@
 <html>
 
 <head>
-    <title>Home - Alexander Toop</title>
+    <title>Home - Alexander ('Alex') Toop, Software Engineering Portfolio</title>
     <meta name="description"
-          content="A website created to display information about and projects created by Alexander Toop. "/>
+          content="Software Engineering portfolio website. Alexander Toop, previously employed by BT and studied at Aberystwyth
+          University. Projects include Java, JavaScript, PHP, Angular and Node development."/>
     <link rel="icon" href="../images/favicon.ico"/>
     <link rel="stylesheet" href="../stylesheets/style.css">
     <!-- 'Simple line icons': lisenced under MIT lisence -->
@@ -51,7 +52,7 @@
 <div id="wrapper">
 
     <div id="header">
-        <h1>Alexander John Toop</h1>
+        <h1>Alex Toop, Software Engineering</h1>
     </div>
 
     <div class="row">
@@ -67,22 +68,9 @@
                 pre-sales systems in prior BT employment.
             </p>
 
-            <h2>History.</h2>
-            <p>Achieved grades BBBD in Computing, Mathematics, General Studies and Physics at A-Level.</p>
-            <p>BCS Accredited Software Engineering Bachelors Degree (4Yr Integrated Industrial Year)
-                Aberystwyth University. [Pending] </p>
-            <p>BT TSO Software Development involving Java and Angular.</p>
-
-            <h2>Hobbies.</h2>
-            <p>
-                I am keen to pursue development projects in my spare time and currently enjoy Fitbit JavaScript
-                development alongside node.js projects. See '<a href="projects.html">Projects</a>' section of this
-                website.
-            </p>
-            <p>
-                I regularly swim with friends and enjoy long-distance running on occasion. Competitive esports gaming is
-                one of my passions and I have attended and won events at LANs as a part of a team.
-            </p>
+            <h2>GitHub.</h2>
+            <div class="github-widget" data-username="alextoop"></div>
+            <script src="https://npmcdn.com/github-card@1.2.0/dist/widget.js"></script>
 
         </div>
 
@@ -90,13 +78,28 @@
 
 
             <h2>Development.</h2>
-            <p>[Commercial] Java and JavaScript development and deployment.</p>
-            <p>[Commercial] JUnit, Jasmine and Angular framework use.</p>
-            <p>[Personal] Fitbit JavaScript and node.js development.</p>
+            <ul>
+                <li>Commercial, Java and JavaScript development and deployment.</li>
+                <li>Commercial, JUnit, Jasmine and Angular framework use.</li>
+                <li>Personal, Fitbit JavaScript and node.js development.</li>
+            </ul>
 
-            <h2>GitHub.</h2>
-            <div class="github-widget" data-username="alextoop"></div>
-            <script src="https://npmcdn.com/github-card@1.2.0/dist/widget.js"></script>
+            <h2>History.</h2>
+            <ul>
+                <li>Achieved grades BBBD in Computing, Mathematics, General Studies and Physics at A-Level.</li>
+                <li>Software Engineering Bachelors Degree, Aberystwyth University. [Pending]</li>
+                <li>BT TSO Software Development involving Java and Angular.</li>
+            </ul>
+
+            <h2>Hobbies.</h2>
+            <p>
+                I enjoy developing in my spare time and currently doing Fitbit JavaScript
+                development alongside node.js projects. See '<a href="projects.html">Projects</a>'.
+            </p>
+            <p>
+                I regularly swim with friends and enjoy long-distance running on occasion. Competitive esports gaming is
+                one of my passions and I have attended and won events at LANs as a part of a team.
+            </p>
 
         </div>
 
@@ -110,17 +113,19 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block img4" src="./images/Aberystwyth_Dock_Hipster.jpg" alt="First slide">
+                <img class="d-block img4" src="./images/compressed/alex_toop_brecon_snow.jpg"
+                     alt="Alexander ('Alex') Toop's image of the end of a walk in Brecon.">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Main harbour.</h5>
-                    <p>Aberystwyth, UK.</p>
+                    <h5>Walking.</h5>
+                    <p>Brecon, UK.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="d-block img4" src="./images/Aberystwyth_Looking_Out.jpg" alt="Second slide">
+                <img class="d-block img4" src="./images/compressed/alex_toop_cardiff.jpg"
+                     alt="Alexander ('Alex') Toop's image in Cardiff.">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Harbour view.</h5>
-                    <p>Aberystwyth, UK.</p>
+                    <h5>Work.</h5>
+                    <p>Cardiff, UK.</p>
                 </div>
             </div>
         </div>
