--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,10 @@
 <html>
 
 <head>
-    <title>Contact - Alexander Toop</title>
+    <title>Contact - Alexander ('Alex') Toop, Software Engineering Portfolio</title>
     <meta name="description"
-          content="A website created to display information about and projects created by Alexander Toop. "/>
+          content="Contact details and links related to me. Software Engineering portfolio website. Alexander Toop, previously employed by BT and studied at Aberystwyth
+          University. Projects include Java, JavaScript, PHP, Angular and Node development."/>
     <link rel="icon" href="../images/favicon.ico"/>
     <link rel="stylesheet" href="../stylesheets/style.css">
     <!-- 'Simple line icons': lisenced under MIT lisence -->
@@ -52,7 +53,7 @@
 
 
     <div id="header">
-        <h1>Contact</h1>
+        <h1>Contact, Alex Toop</h1>
     </div>
 
 
