--- a/public/projects.html
+++ b/public/projects.html
@@ -1,9 +1,10 @@
 <html>
 
 <head>
-    <title>Project - Alexander Toop</title>
+    <title>Projects - Alexander ('Alex') Toop, Software Engineering Portfolio</title>
     <meta name="description"
-          content="A website created to display information about and projects created by Alexander Toop. "/>
+          content="Contains projects I have worked on in my spare time. Software Engineering portfolio website. Alexander Toop, previously employed by BT and studied at Aberystwyth
+          University. Projects include Java, JavaScript, PHP, Angular and Node development."/>
     <link rel="icon" href="../images/favicon.ico"/>
     <link rel="stylesheet" href="../stylesheets/style.css">
     <!-- 'Simple line icons': lisenced under MIT lisence -->
@@ -51,7 +52,7 @@
 <div id="wrapper">
 
     <div id="header">
-        <h1>Projects</h1>
+        <h1>Projects, Software Engineering</h1>
     </div>
     <div class="row">
         <div class="col-md-12">
