--- a/public/projects.html
+++ b/public/projects.html
@@ -41,6 +41,21 @@
     <!--To support Android-->
     <link rel=”icon” sizes=”192×192″ href=”https://www.alextoop.com/images/device-icon-192.png”>
     <link rel=”icon” sizes=”128×128″ href=”https://www.alextoop.com/images/device-icon-128.png”>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-73302818-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+
+        gtag('config', 'UA-73302818-2');
+    </script>
+
 </head>
 
 <body>
