Updated font. Changed some content.

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.css">
     <!-- Gets fonts for titles and text -->
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Prociono" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -67,7 +67,7 @@
 <div id="wrapper">
 
     <div id="header">
-        <h1>Alex Toop, Software Engineering</h1>
+        <h1>Alex Toop Software Engineering</h1>
     </div>
 
     <div class="row">
@@ -76,7 +76,7 @@
 
             <h2>Me.</h2>
             <p>
-                Studied at Aberystwyth University Software Engineering BEng. Results pending.
+                Studied at Aberystwyth University Software Engineering BEng. First Class Honours.
             </p>
             <p>
                 Developed Java server back-ends and Angular front-ends for intelligent
