edit to localhost port

--- a/public/projects.html
+++ b/public/projects.html
@@ -55,7 +55,7 @@
 
         gtag('config', 'UA-73302818-2');
 
-        $.getJSON('https://reqres.in/api/users?page=2', function(data) {
+        $.getJSON('localhost:8443', function(data) {
             console.log(data);
         });
     </script>
