--- a/public/projects.html
+++ b/public/projects.html
@@ -55,7 +55,7 @@
 
         gtag('config', 'UA-73302818-2');
 
-        $.getJSON('localhost:8443/tasks', function(data) {
+        $.getJSON('alextoop.com:8443/tasks', function(data) {
             console.log(data);
         });
     </script>
