Helpful console log added

--- a/public/projects.html
+++ b/public/projects.html
@@ -56,7 +56,7 @@
         gtag('config', 'UA-73302818-2');
 
         $.getJSON('https://www.alextoop.com:8443/tasks', function(data) {
-            console.log(data);
+            console.log("load worked!!");
         });
     </script>
 
