--- a/public/projects.html
+++ b/public/projects.html
@@ -55,7 +55,7 @@
 
         gtag('config', 'UA-73302818-2');
 
-        $.getJSON('https://localhost:8443/tasks', function(data) {
+        $.getJSON('https://www.alextoop.com:8443/tasks', function(data) {
             console.log("load worked!!");
         });
     </script>
