--- a/public/projects.html
+++ b/public/projects.html
@@ -65,6 +65,7 @@
             dataType: 'jsonp',
             url: 'https://www.alextoop.com:8443/tasks',
             success: function(jsondata){
+                alert("hi");
                 console.log("load worked!!");
             }
         })
