Added error catch to ajax call in projects

--- a/public/projects.html
+++ b/public/projects.html
@@ -61,12 +61,18 @@
 
         $.ajax({
             type: 'GET',
+            dataType: 'jsonp',
             crossDomain: true,
             url: 'https://www.alextoop.com:8443/tasks',
             success: function(data){
-                alert("hi");
+                alert("success");
                 var element = document.getElementById('about_section');
-                element.innerHTML = jsondata;
+                element.innerHTML = data;
+            },
+            error: function (data, status, req) {
+                alert("fail");
+                var element = document.getElementById('about_section');
+                element.innerHTML = data;
             }
         })
     </script>
