processing of full error

--- a/public/projects.html
+++ b/public/projects.html
@@ -72,7 +72,9 @@
             error: function (data, status, req) {
                 alert("fail");
                 var element = document.getElementById('about_section');
-                element.innerHTML =  JSON.stringify(data.responseText);
+                element.innerHTML =  JSON.stringify(data);
+                element.appendChild =  JSON.stringify(status);
+                element.appendChild =  JSON.stringify(req);
             }
         })
     </script>
