fixed formatting issue

--- a/public/projects.html
+++ b/public/projects.html
@@ -71,7 +71,7 @@
                 // element.innerHTML = data;
             },
             error: function (data, status, req) {
-                console.log("error + " data.responseText);
+                console.log("error + " + data.responseText);
                 // alert("fail");
                 // var element = document.getElementById('about_section');
                 // element.innerHTML =  JSON.stringify(data);
