--- a/public/projects.html
+++ b/public/projects.html
@@ -71,14 +71,17 @@
                 // element.innerHTML = data;
             },
             error: function (data, status, req) {
-                console.log("error + " + data.responseText);
+                console.log("error + " + JSON.stringify(data));
                 // alert("fail");
                 // var element = document.getElementById('about_section');
                 // element.innerHTML =  JSON.stringify(data);
                 // element.appendChild =  JSON.stringify(status);
                 // element.appendChild =  JSON.stringify(req);
             }
-        })
+        }).done(function(data, textStatus, jqXHR){
+            console.log(JSON.stringify(data));
+            console.log(jqXHR.responseText);
+        });   
     </script>
 
 </head>
