--- a/public/projects.html
+++ b/public/projects.html
@@ -61,7 +61,7 @@
 
         $.ajax({
             type: 'GET',
-            dataType: 'jsonp',
+            dataType: 'json',
             crossDomain: true,
             url: 'https://www.alextoop.com:8443/tasks',
             success: function(data){
