Projects page is now rependant on API content

--- a/public/projects.html
+++ b/public/projects.html
@@ -55,9 +55,20 @@
 
         gtag('config', 'UA-73302818-2');
 
-        // $.getJSON('https://www.alextoop.com:8443/tasks', function(data) {
-        //     console.log("load worked!!");
-        // });
+        function populatePageData(data) {
+            data = data.reverse();
+            var mainContent = document.getElementById('about_section');
+            data.forEach(function(entry) {
+                var div = document.createElement("div");
+                var title = document.createElement("h2");
+                title.innerHTML = entry.title;
+                var content = document.createElement("p");
+                content.innerHTML = entry.content;
+                div.appendChild(title);
+                div.appendChild(content);
+                mainContent.appendChild(div);
+            });
+        }
 
         $.ajax({
             type: 'GET',
@@ -65,25 +76,11 @@
             crossDomain: true,
             url: 'https://www.alextoop.com:8443/tasks',
             success: function(data){
-                console.log("pass");
-                // alert("success");
-                // var element = document.getElementById('about_section');
-                // element.innerHTML = data;
+                populatePageData(data);
             },
             error: function (data, status, req) {
-                console.log(JSON.stringify(data));
-                console.log(JSON.stringify(status));
-                console.log(JSON.stringify(req));
-                // alert("fail");
-                // var element = document.getElementById('about_section');
-                // element.innerHTML =  JSON.stringify(data);
-                // element.appendChild =  JSON.stringify(status);
-                // element.appendChild =  JSON.stringify(req);
+                console.log("Failed API request for content.");
             }
-        }).done(function(data, textStatus, jqXHR){
-            console.log(JSON.stringify(data));
-            console.log(JSON.stringify(data));
-            console.log(jqXHR.responseText);
         });   
     </script>
 
@@ -109,61 +106,6 @@
                     most recent development.
                 </div>
 
-                <h2>Angular 5 Website Development.</h2>
-                <p>
-                    This website has been developed using Angular 5 and Bootstrap 4. It is hosted on AWS EC2 and is
-                    intended as a way to practise my Angular skills outside of work. The code will be posted on GitHub
-                    as a public project should you wish to have a look after I've finished my current major revamp of
-                    this site.
-                </p>
-
-                <h2>AWS Cloud Development.</h2>
-                <p>
-                    With the progression of services to the cloud I've been interested in becoming familiar with the
-                    process of cloud development, deployment and management. To this end I've set up my own AWS project
-                    with this website as an example. This is in support of my progress towards AWS Cloud Practitioner
-                    certification. For example, this website itself if hosted on a t1.micro instance on AWS EC2.
-                </p>
-
-                <h2>Java Coding Test Submission - Router Patch Tester.</h2>
-                <p>
-                    A project created to demonstrate some of my Java programming skills. Specification was provided by
-                    BT for my industrial year application. Program takes in a CSV file and then outputs to terminal the
-                    details of routers that meet the update criteria. CSV is expected to consist of lines containing 5
-                    comma separated values. The contents of these lines are then tested against the update criteria.
-                    (Hostname/IP Address have not been repeated, router has not already been patched, version is 12+ and
-                    information is logical.) <strong>GitHub</strong> [<a
-                        href="https://github.com/AlexToop/Router-Patch-Check-Submission" target="_blank">LINK</a>]
-                </p>
-
-                <h2>Arduino Hardware and Programming: Making a clock.</h2>
-                <p>
-                    Having been introduced to Arduinos during the first year of my Software engineering degree at
-                    Aberystwyth University I decided I really wanted to try and pursue different projects with my
-                    Arduino. Therefore after finding and purchasing a hardware package for the Arduino I decided to
-                    create my own clock using the LCD screen provided and a serial clock circuit.
-                    <strong>GitHub</strong> [<a href="https://github.com/AlexToop/arduino_clock"
-                                                target="_blank">LINK</a>]
-                </p>
-
-                <h2>Personal Website Development.</h2>
-                <p>
-                    Having been taught about websites in a first year module I decided I would like to make my own
-                    website. I could have used solutions such as WordPress to make the process easier, however I chose
-                    to write the website from scratch to get a better feel for HTML and CSS. Whilst creating the website
-                    I decided to focus on simplicity and functionality. A design concept I personally adore. <strong>GitHub</strong>
-                    [<a href="https://github.com/AlexToop/alextoop.github.io"
-                        target="_blank">LINK</a>]
-                </p>
-
-                <h2>Swift Xcode iOS Development.</h2>
-                <p>
-                    After hearing many positive things about the Swift programming language my curiosity got the better
-                    of me and I decided to try and develop an iOS application using Xcode. Having had no prior
-                    experience with the IDE or the language the initial learning curve was quite steep. However, soon I
-                    became more familiar with the syntax and development environment. <strong>GitHub</strong> [<a
-                        href="">LINK_NA</a>]
-                </p>
             </div>
         </div>
     </div>
