--- a/public/jquery_includes/navbar.html
+++ b/public/jquery_includes/navbar.html
@@ -9,9 +9,9 @@
 
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="nav navbar-nav mr-auto">
-                <li id="home-link" class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
-                <li id="projects-link" class="nav-item"><a class="nav-link" href="../projects.html">Projects</a></li>
-                <li id="contact-link" class="nav-item"><a class="nav-link" href="../contact.html">Contact</a></li>
+                <li id="home-link" class="nav-item"><a class="nav-link" href="../">Home</a></li>
+                <li id="projects-link" class="nav-item"><a class="nav-link" href="../projects">Projects</a></li>
+                <li id="contact-link" class="nav-item"><a class="nav-link" href="../contact">Contact</a></li>
             </ul>
         </div>
     </div>
